# agentcore-local

./: .gitignore  README.md  docker-compose.yml
agent/: Dockerfile  main_agui.py  pyproject.toml
frontend/: app.py
frontend-old/: Dockerfile  index.html  nginx.conf
legacy/: README-AGUI.md  agent-main-old.py
legacy/frontend-streamlit/: Dockerfile
ui/: .dockerignore  Dockerfile  next.config.js  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/copilotkit/: route.ts
